0.1.14

2013-04-15  Brecht Sanders  <brechtsanders@users.sourceforge.net>

	* added command line options -u username -w password

0.1.13

2013-04-04  Brecht Sanders  <brechtsanders@users.sourceforge.net>

	* added man page for application (quickmail.1)

2013-03-16  Brecht Sanders  <brechtsanders@users.sourceforge.net>

	* introduced dual licensing (GPL/commercial) and added License.txt

2013-02-17  Brecht Sanders  <brechtsanders@users.sourceforge.net>

	* fixed usage info in command line help (missing -m short help)
	* added version information of libcurl library (and dependancies)
	* undo previous change to use LF instead of CRLF, see RFC 2822

0.1.12

2013-02-16  Brecht Sanders  <brechtsanders@users.sourceforge.net>

	* fixed a memory leak in quickmail_get_data when handling body data
	* use LF instead of CRLF in headers (fixes a specific test case)
	* quickmail program now accepts body from stdin if not supplied
	* quickmail program now checks if at least 1 destination is supplied

2013-02-13  Brecht Sanders  <brechtsanders@users.sourceforge.net>

	* fixed bugs in custom body/attachment handling
	* changes to support Microsoft Visual C as proposed by Troels K.

2013-02-12  Brecht Sanders  <brechtsanders@users.sourceforge.net>

	* changes to support Microsoft Visual C as proposed by Troels K.

2012-11-24  Brecht Sanders  <brechtsanders@users.sourceforge.net>

	* added -m command line parameter for MIME type of body

0.1.11

2012-11-23  Brecht Sanders  <brechtsanders@users.sourceforge.net>

	* fixed hang on remote SMTP disconnect if libcurl is not used
	* quickmail application now returns nonzero exit code on error
	* quickmail_set_body result is no longer const and caller must free()
	* fixed missing Content-Type if no attachments
	* added multipart/alternative support for multiple bodies
	* added quickmail_add_body_file: add body from file
	* added quickmail_add_body_memory: add body from memory
	* added quickmail_add_body_custom: add body from custom source